--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
         </head>
     <body>
         <script src="src/home.js"></script>
+        <script src="src/menu.js"></script>
         <script src="src/header.js"></script>
     </body>
 </html>
