nuke that stupid shi

--- a/public/index.html
+++ b/public/index.html
@@ -3,9 +3,6 @@
     <head>
         <meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <script src="/config.js"></script>
-        <link rel="prefetch" href="/lib/scramjet.worker.js" />
-		<link rel="prefetch" href="/lib/scramjet.shared.js" />
         <script src="/lib/mote.bundle.js"></script>
         <style>
             html, body {
@@ -18,6 +15,7 @@
         <script src="/baremux/"></script>
 		<script src="/lib/scramjet.controller.js"></script>
 		<script src="config.js"></script>
+        <script src="/startup.js"></script>
         </head>
     <body>
         <script src="src/home.js"></script>
