--- a/public/index.html
+++ b/public/index.html
@@ -27,5 +27,8 @@
         <div id="root"></div>
 
         <script src="/startup.js"></script>
+
+
+        <script src="/hardening/height.js"></script>
     </body>
 </html>
