--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,6 @@
         <script src="/startup.js"></script>
 
 
-        <script src="/hardening/height.js"></script>
+        <script src="/hardening/harden.js" type="module"></script>
     </body>
 </html>
