--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         <script src="/src/home.js"></script>
         <script src="/src/header.js"></script>
         <script src="/src/settings.js"></script>
+        <script src="/src/about.js"></script>
 
         <div id="root"></div>
 
