--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
         <script src="/baremux/"></script>
 		<script src="/lib/scramjet.controller.js"></script>
 		<script src="/config.js"></script>
+        
         </head>
     <body>
         <script src="/src/menu.js"></script>
@@ -25,7 +26,7 @@
         <script src="/src/about.js"></script>
         <div id="root"></div>
 
-        <script src="/startup.js"></script>
+        <script src="/startup.js" type="module"></script>
 
 
         <script src="/hardening/harden.js" type="module"></script>
