--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
                 border: none;
                 margin:0;
                 padding: 0;
+                overflow: hidden;
             }
         </style>
         <script src="/baremux/"></script>
@@ -20,10 +21,7 @@
         </head>
     <body>
         <script src="/src/menu.js"></script>
-        <script src="/src/home.js"></script>
         <script src="/src/header.js"></script>
-        <script src="/src/settings.js"></script>
-        <script src="/src/about.js"></script>
         <div id="root"></div>
 
         <script src="/startup.js" type="module"></script>
